#82 Fixed header and card on mobile

--- a/front-end/app/styles/_card.scss
+++ b/front-end/app/styles/_card.scss
@@ -147,8 +147,12 @@ md-card {
 
 
   &.card-sm {
-    height: 270px;
-    width: 190px;
+    height: 330px;
+    width: 234px;
+    @media (min-width: $layout-breakpoint-xs) {
+      height: 270px;
+      width: 190px;
+    }
     @media (min-width: $layout-breakpoint-lg) {
       height: 330px;
       width: 234px;
